--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 <p>Введите время снятия показаний: <input id="time2" type="time"></p>
 <hr/>
 <button onclick="debit()">Расчитать дебит</button>
-<p id="otvet"></p>    
+<p id="otvet"></p> 
+<table border="1" weight=100px>
+    <tr>
+     <td>Ячейка 1</td>
+     <td>Ячейка 2</td>
+     <td>Ячейка 3</td>
+     <td>Ячейка 4</td>
+   </tr>
+  </table>   
 </body>
 </html>
