--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <hr/>
 <button onclick="debit()">Расчитать дебит</button>
 <p id="otvet"></p> 
-<table border="1" weight=100px>
+<table border="1">
     <tr>
-     <td>Ячейка 1</td>
-     <td>Ячейка 2</td>
-     <td>Ячейка 3</td>
-     <td>Ячейка 4</td>
+     <td id=tab1>Ячейка 1</td>
+     <td id=tab2>Ячейка 2</td>
+     <td id=tab3>Ячейка 3</td>
+     <td id=tab4>Ячейка 4</td>
    </tr>
   </table>   
 </body>
