--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <p id="otvet"></p> 
 <table border="1">
     <tr>
-     <td id=tab1>Ячейка 1</td>
-     <td id=tab2>Ячейка 2</td>
-     <td id=tab3>Ячейка 3</td>
-     <td id=tab4>Ячейка 4</td>
+     <td id=tab1 width=150px>Время 1</td>
+     <td id=tab2 width=150px>Время 2</td>
+     <td id=tab3 width=150px>Показание</td>
+     <td id=tab4 width=150px>Ответ</td>
    </tr>
   </table>   
 </body>
