--- a/debit/index.html
+++ b/debit/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="src/style.css">
+    <script src="src/script.js" defer></script>
     <title>Калькулятор дебита</title>
 </head>
 <body>
