--- a/debit/index.html
+++ b/debit/index.html
@@ -9,16 +9,18 @@
 <body>
     <div class=center>
     <h4 class=header>Расчет дебита скважины</h4>
-<hr/>
-<p>Введите в нижние поля данные по скважине:</p>
-<p>Введите показание счетчика: <input id="pokaz" type="number" ></p>
-<p>Введите время установки счетчика: <input id="time1" type="time"></p>
-<p>Введите время снятия показаний: <input id="time2" type="time"></p>
-<hr/>
-<button onclick="debit()">Расчитать дебит</button>
-<button onclick="clearTable()">Очистить таблицу</button>
-<p id="otvet"></p> 
-<table id="table" border="1">
+    <hr/>
+    <p>Введите в нижние поля данные по скважине:</p>
+    <p>Введите показание счетчика: <input id="pokaz" type="number" ></p>
+    <p>Введите время установки счетчика: <input id="time1" type="time"></p>
+    <p>Введите время снятия показаний: <input id="time2" type="time"></p>
+    <hr/>
+    <button onclick="debit()">Расчитать дебит</button>
+    <button onclick="clearTable()">Очистить таблицу</button>
+    <hr/> 
+</div>
+<div class="center2">
+<table id="table">
     <thead>
         <tr id="tabliz">
             <td>Время 1</td>
@@ -27,10 +29,10 @@
             <td>Ответ</td>
        </tr>
     </thead>
-    <tbody id="tableBody">
-        
+    <tbody id="tableBody">   
     </tbody>
   </table>   
-  </div>
+  <hr/>
+</div>
 </body>
 </html>
