--- a/game/index.html
+++ b/game/index.html
@@ -25,7 +25,7 @@
     </div>
         <div class="starship">
 
-            <img id="myship" src="img/ufo1.png" alt="ufo1"> 
+            <img id="myship" src="img/ufo1.png" alt="starship"> 
 
         </div>
 
